// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> 5개의 메뉴를 가진다 1`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  icon="home"
  location="/"
  to="/"
/>
`;

exports[`<Header /> 5개의 메뉴를 가진다 2`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  icon="user"
  location="/"
  to="/auth"
/>
`;

exports[`<Header /> 정상적으로 렌더링된다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1rem;
  box-shadow: 0 0.125rem 0.5rem 0 rgba(0,0,0,0.2),0 0 0 0 rgba(0,0,0,0.08);
}

.c1 {
  margin-left: 0.4rem;
}

@media (max-width:639px) {
  .c1 {
    display: none;
  }
}

<div
  class="c0"
>
  <span
    componentname="IconButton"
  >
    <span
      class="c1"
    >
      홈
    </span>
  </span>
  <span
    componentname="IconButton"
  >
    <span
      class="c1"
    >
      즐겨찾기
    </span>
  </span>
  <span
    componentname="IconButton"
  >
    <span
      class="c1"
    >
      커뮤니티
    </span>
  </span>
  <span
    componentname="IconButton"
  />
</div>
`;

exports[`<Header /> 커뮤니티 메뉴가 선택되어 있다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1rem;
  box-shadow: 0 0.125rem 0.5rem 0 rgba(0,0,0,0.2),0 0 0 0 rgba(0,0,0,0.08);
}

<div
  className="c0"
>
  <StyledIconButton
    icon="home"
    location="/community"
    to="/"
  >
    <Text>
      홈
    </Text>
  </StyledIconButton>
  <StyledIconButton
    icon="star"
    location="/community"
    to="/bookmarks"
  >
    <Text>
      즐겨찾기
    </Text>
  </StyledIconButton>
  <StyledIconButton
    icon="comment"
    location="/community"
    to="/community"
  >
    <Text>
      커뮤니티
    </Text>
  </StyledIconButton>
  <StyledIconButton
    icon="user"
    location="/community"
    to="/auth"
  />
</div>
`;
